Add directories to rubocop.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,9 +3,13 @@ AllCops:
     - metadata.rb
     - '**/Gemfile'
     - attributes/**/*
+    - definitions/**/*
     - libraries/**/*
+    - providers/**/*
     - recipes/**/*
+    - resources/**/*
     - spec/**/*
+    - test/**/*
   Exclude:
     - cookbooks/**/*
     - vendor/**/*
