--- a/.kitchen-openstack.yml
+++ b/.kitchen-openstack.yml
@@ -26,7 +26,7 @@ platforms:
 suites:
 - name: default
   run_list:
-  - recipe[example]
+  - recipe[skeleton]
   attributes: {
-    example: {}
+    skeleton: {}
   }
