--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -2,18 +2,24 @@
 driver_plugin: vagrant
 driver_config:
   require_chef_omnibus: true
+provisioner:
+  cookbook_files_glob: VERSION,README.*,metadata.{json,rb},attributes/**/*,definitions/**/*,files/**/*,libraries/**/*,providers/**/*,recipes/**/*,resources/**/*,templates/**/*
 
 platforms:
   - name: ubuntu-12.04
     driver_config:
       box: opscode-ubuntu-12.04
       box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
-  - name: ubuntu-13.04
-    driver_config:
-      box: opscode-ubuntu-13.04
-      box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-13.04_provisionerless.box
 
 suites:
   - name: 'default'
     run_list:
       - recipe[bamboo-agent]
+    attributes:
+      bamboo-agent:
+        server:
+          address: your-bamboo-url
+        agents: [
+          {id: "1"},
+          {id: "2"}
+        ]
