--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,9 +7,8 @@ provisioner:
 
 platforms:
   - name: ubuntu-12.04
-  - name: debian-7.6
-    driver_config:
-      box: chef/debian-7.6
+  - name: ubuntu-14.04
+  - name: debian-7.1
   - name: centos-6.4
 
 suites:
